<resources>
    <string name="app_name" translatable="false">AmazWare</string>
    <string name="keddnyo" translatable="false">Keddnyo</string>
    <string name="firmwarehouse" translatable="false">Firmwarehouse</string>
    <string name="schakal" translatable="false">Schakal</string>
    <string name="downloading">Downloading file</string>
    <string name="error">Error</string>
    <string name="feed">Feed</string>
    <string name="explore">Explore</string>
    <string name="extras">Extras</string>
    <string name="telegram" translatable="false">Telegram</string>
    <string name="About">About</string>
    <string name="settings">Settings</string>
    <string name="behaviour">Behaviour</string>
    <string name="default_tab">Default tab</string>
    <string name="download_provider">Built-in download provider</string>
    <string name="simple_response_summary">Convenient response in Extras tab</string>
    <string name="server_response">Server response</string>
    <string name="simple_response">Convenient response</string>
    <string name="lang_formatted">Languages names</string>
    <string name="lang_formatted_summary">Show languages names instead of codes</string>
    <string name="indication">Indication</string>
    <string name="download_notification">Show download notification</string>
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="accent_color">Accent color</string>
    <string name="colorize_icons">Colorize icons</string>
    <string name="colorize_titles">Colorize titles</string>

    <string name="firmware_version">Firmware version</string>
    <string name="resource_version">Resources version</string>
    <string name="base_resource_version">Base resources version</string>
    <string name="font_version">Font version</string>
    <string name="gps_version">GPS version</string>
    <string name="lang">Languages</string>
    <string name="change_log">Changelog</string>
    <string name="date">Release date</string>
    <string name="none">None</string>
    <string name="firmware_not_found">Firmware not found</string>

    <string name="manual_input">Manual</string>
    <string name="button_submit">Submit</string>
    <string name="button_reset">Reset</string>
    <string name="request_device_source" translatable="false">deviceSource</string>
    <string name="request_production_source" translatable="false">productionSource</string>
    <string name="request_app_name" translatable="false">appname</string>
    <string name="request_app_version" translatable="false">appVersion</string>

    <string name="lang_zh">Chinese</string>
    <string name="lang_en">English</string>
    <string name="lang_es">Spanish</string>
    <string name="lang_ru">Russian</string>
    <string name="lang_fr">French</string>
    <string name="lang_de">German</string>
    <string name="lang_it">Italian</string>
    <string name="lang_tr">Turkish</string>
    <string name="lang_pt_br">Brazilian Portuguese</string>
    <string name="lang_pl">Polish</string>
    <string name="lang_ja">Japanese</string>
    <string name="lang_ko">Korean</string>
    <string name="lang_th">Thai</string>
    <string name="lang_id">Indonesian (id)</string>
    <string name="lang_ar">Arabic</string>
    <string name="lang_he">Hebrew</string>
    <string name="lang_vi">Vietnamese</string>
    <string name="lang_uk">Ukrainian</string>
    <string name="lang_cs">Czech</string>
    <string name="lang_el">Greek</string>
    <string name="lang_sr">Serbian</string>
    <string name="lang_sr_latn_rs">Serbian Latin</string>
    <string name="lang_ca_es">Catalan</string>
    <string name="lang_fi">Finnish</string>
    <string name="lang_no">Norwegian</string>
    <string name="lang_da">Danish</string>
    <string name="lang_sv">Swedish</string>
    <string name="lang_pt">Portuguese</string>
    <string name="lang_ro">Romanian</string>
    <string name="lang_ms">Malay</string>
    <string name="lang_in">Indonesian (in)</string>
    <string name="lang_ca">Catalan</string>
    <string name="lang_iw">Hebrew (former)</string>
    <string name="lang_nl">Dutch</string>

    <string-array name="tabs_entries">
        <item>@string/feed</item>
        <item>@string/explore</item>
        <item>@string/extras</item>
        <item>@string/telegram</item>
    </string-array>
    <string-array name="accent_colors">
        <item>Default</item>
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
    </string-array>
    <string-array name="entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="dark_mode_entries">
        <item>Light theme</item>
        <item>Dark theme</item>
        <item>Follow system</item>
    </string-array>
    <string-array name="dark_mode_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>