<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_dark_mode"
            app:key="dark_mode"
            app:title="@string/dark_mode"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_extras"
            app:key="simple_response"
            app:title="@string/extras_list_style_response" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_download"
            app:key="download_provider"
            app:title="@string/download_provider" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/About">

        <Preference
            app:icon="@drawable/ic_info"
            app:key="info"
            app:summary="@string/keddnyo"
            app:title="@string/app_name" />

        <Preference
            app:icon="@drawable/ic_download"
            app:key="info2"
            app:summary="@string/schakal"
            app:title="@string/firmwarehouse" />

    </PreferenceCategory>

</PreferenceScreen>