<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="5sp">

        <Spinner
            android:id="@+id/deviceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/appVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/request_app_version"
                    android:inputType="text"
                    android:maxLength="17"
                    tools:ignore="Autofill" />

                <EditText
                    android:id="@+id/deviceSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/request_device_source"
                    android:inputType="number"
                    android:maxLength="2"
                    tools:ignore="Autofill" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/appName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/request_app_name"
                    android:maxLength="21"
                    tools:ignore="Autofill,TextFields" />

                <EditText
                    android:id="@+id/productionSource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/request_production_source"
                    android:inputType="number"
                    android:maxLength="3"
                    tools:ignore="Autofill" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/secondary"
                    android:text="@string/button_reset"
                    android:textColor="@color/secondary_background"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/secondary"
                    android:longClickable="true"
                    android:text="@string/button_submit"
                    android:textColor="@color/secondary_background"
                    tools:ignore="ButtonStyle" />
            </TableRow>
        </TableLayout>

        <ListView
            android:id="@+id/responseList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            tools:ignore="NestedScrolling" />

        <TextView
            android:id="@+id/responseField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textIsSelectable="true" />

    </LinearLayout>

</ScrollView>