<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:minWidth="290dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:padding="15dp">

        <Spinner
            android:id="@+id/deviceList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/productionSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_production_source"
            android:inputType="number"
            android:maxLength="3"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/deviceSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_device_source"
            android:inputType="number"
            android:maxLength="3"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/appVersion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_app_version"
            android:inputType="text"
            android:maxLength="17"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/request_app_name"
            android:maxLength="20"
            tools:ignore="Autofill,TextFields" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonImport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    android:longClickable="true"
                    android:text="@string/import_device_values"
                    android:textColor="@color/secondary_background"
                    tools:ignore="ButtonStyle"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/secondary"
                    android:longClickable="true"
                    android:text="@android:string/ok"
                    android:textColor="@color/secondary_background"
                    tools:ignore="ButtonStyle" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>